--- a/.gitignore
+++ b/.gitignore
@@ -205,4 +205,8 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
-*/data/*
+
+# Project-specific
+*/data/*              # Database files
+results/*.json        # Old output files (v1.0 - no longer used)
+sales_reps.txt
