--- a/.gitignore
+++ b/.gitignore
@@ -207,6 +207,7 @@ marimo/_lsp/
 __marimo__/
 
 # Project-specific
+data/*
 */data/*              # Database files
 results/*.json        # Old output files (v1.0 - no longer used)
 sales_reps.txt
