added frontend visualization and batching for slack pots

--- a/.env.example
+++ b/.env.example
@@ -21,4 +21,9 @@ SLACK_CHANNEL_ID=C01234567  # Channel ID to post to
 
 # Database Configuration
 DB_TYPE=sqlite  # "sqlite" for local, "firestore" for cloud
-SQLITE_DB_PATH=./data/calls.db
+
+# Database path - Use absolute path to keep data separate from repo
+# Recommended: Store in home directory to avoid committing data
+# Supports ~ or $HOME expansion
+SQLITE_DB_PATH=~/introspect/data/calls.db
+# Alternative: ./data/calls.db (relative to project root)
