--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,10 @@ click>=8.1.0
 # Optional dependencies
 pandas>=2.0.0
 
+# UI dependencies
+streamlit>=1.31.0
+plotly>=5.18.0
+
 # Development dependencies
 pytest>=7.4.0
 pytest-asyncio>=0.21.0
