made into a cli and update the UI

--- a/.gitignore
+++ b/.gitignore
@@ -211,3 +211,4 @@ data/*
 */data/*              # Database files
 results/*.json        # Old output files (v1.0 - no longer used)
 sales_reps.txt
+sales_rep_data.csv
